[gd_scene load_steps=8 format=3 uid="uid://ci2ew4i7l6ppw"]

[ext_resource type="Texture2D" uid="uid://wemlbie734x7" path="res://asset/2d/garalina/gen8.png" id="1_h8mo5"]
[ext_resource type="Script" path="res://script/ui/garalina.gd" id="1_j7o5x"]
[ext_resource type="Texture2D" uid="uid://c8xmt0vw8qyko" path="res://asset/2d/garalina/logo.png" id="2_onfod"]
[ext_resource type="AudioStream" uid="uid://d1g1osousca16" path="res://music/garalina.ogg" id="3_bq2o0"]

[sub_resource type="Animation" id="Animation_nfmyy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [153]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c6ie3"]
resource_name = "logo"
length = 24.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 153]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(15, 17.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8u4k"]
_data = {
"RESET": SubResource("Animation_nfmyy"),
"logo": SubResource("Animation_c6ie3")
}

[node name="Garalina" type="Node2D"]
texture_filter = 1
script = ExtResource("1_j7o5x")

[node name="LogoAnim" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_h8mo5")
centered = false
hframes = 13
vframes = 12
frame = 153

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.592157, 0.6, 0.6, 1)

[node name="Logo" type="Sprite2D" parent="."]
visible = false
z_index = 2
texture = ExtResource("2_onfod")
centered = false
hframes = 8

[node name="Fade" type="ColorRect" parent="."]
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GaralinaSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bq2o0")
autoplay = true
bus = &"Music"

[node name="GaralinaAnim" type="AnimationPlayer" parent="."]
speed_scale = 2.3
libraries = {
"": SubResource("AnimationLibrary_b8u4k")
}

[connection signal="animation_finished" from="GaralinaAnim" to="." method="_on_garalina_anim_animation_finished"]
